# dlprimitives

./: BUIILD.md  BUILD.md  CMakeLists.txt  COPYRIGHT.TXT  Doxyfile  LICENSE.TXT  README.md  config.cmake.hpp
docs/: 6600_vs_1080_2060s.md  benchmarks-all.md  benchmarks-gtx1080.md  benchmarks-gtx960.md  benchmarks-hd530.md  benchmarks-rtx2060s.md  benchmarks-rx560.md  benchmarks-rx6600xt.md  benchmarks.md  build.md  implementation_details.md  kernel_cache.md  main.doxy  network_json_format.md  py.doxy  summary.md  table_to_md.py
docs/benchmarks/: benchmarks-gtx1080.md  benchmarks-gtx960.md  benchmarks-hd530.md  methodology.md
docs/nets_for_benchmark/: alexnet-b16.js  alexnet-b16.prototxt  alexnet-b8.js  alexnet-b8.prototxt  mobilenet_v2-b16.js  mobilenet_v2-b16.prototxt  mobilenet_v2-b8.js  mobilenet_v2-b8.prototxt  resnet18-b16.js  resnet18-b16.prototxt  resnet18-b8.js  resnet18-b8.prototxt  resnet50-b16.js  resnet50-b16.prototxt  resnet50-b8.js  resnet50-b8.prototxt  vgg16-b16.js  vgg16-b16.prototxt  vgg16-b8.js  vgg16-b8.prototxt
examples/cpp/: README.md  image_predict.cpp  onnx_predict.cpp  train_mnist.cpp  util.hpp
examples/python/: train_mnist.py
examples/python/mnist/: train_mnist.py
examples/python/tiny_imagenet/: train_tiny_imagenet.py
include/dlprim/: a.out  basic_operators.hpp  caffe.hpp  context.hpp  core_ops.hpp  definitions.hpp  functions.hpp  json.hpp  model.hpp  net.hpp  onnx.hpp  opencl_include.hpp  operator.hpp  operators.hpp  random.hpp  shape.hpp  shared_resource.hpp  tensor.hpp
include/dlprim/core/: activation.hpp  bias.hpp  bn.hpp  common.hpp  conv.hpp  interpolate.hpp  ip.hpp  loss.hpp  pointwise.hpp  pool.hpp  util.hpp
include/dlprim/cpu/: cpu_ops.hpp
include/dlprim/gpu/: gemm.hpp  gpu_ops.hpp  program_cache.hpp
include/dlprim/ops/: activation.hpp  axpby.hpp  batch_normalization.hpp  bwd_bias.hpp  concat.hpp  conv2d.hpp  elementwise.hpp  initialization.hpp  inner_product.hpp  interpolation.hpp  mse_loss.hpp  nll_loss.hpp  parameter.hpp  pointwise.hpp  pooling.hpp  reduction.hpp  reshape.hpp  scal.hpp  softmax.hpp
include/dlprim/solvers/: adam.hpp  sgd.hpp  solver_base.hpp
include/dlprim/utils/: json_helpers.hpp
proto/: caffe_dlprim.proto  readme.md
python/: predict_mnist.py  python_interface.cpp  test.py
python/dlprim/: __init__.py  netconfig.py
src/: activation.cpp  binary_cache.hpp  context.cpp  conv2d.cpp  core_bn.cpp  core_conv.cpp  core_init.cpp  core_ip.cpp  core_slice.cpp  functions.cpp  gemm.cpp  inner_product.cpp  inner_product_cpu.cpp  json.cpp  net.cpp  operators_factory.cpp  program_cache.cpp  random.cpp  sha1.hpp  shape.cpp  tensor.cpp
src/core/: activation.cpp  bn.cpp  conv.cpp  conv_onednn.cpp  conv_onednn.hpp  init.cpp  interpolate.cpp  ip.cpp  loss.cpp  pointwise.cpp  pool.cpp  slice.cpp  util.cpp
src/importers/: caffe.cpp  onnx.cpp
src/kernels/: activation.cl  adam.cl  atomic.h  axpby.cl  benchmark.cl  bias.cl  bn_sums.cl  bn_utils.cl  broadcast_dims.h  build_source.py  bwd_bias.cl  copy.cl  copy_strided.cl  defs.h  depthwise_separable_bw_filter.cl  depthwise_separable_conv.cl  eltwise.cl  fill.cl  fwd_bias.cl  global_pooling.cl  im2col.cl  interpolate_2d.cl  nll_loss_bwd.cl  nll_loss_fwd.cl  pointwise.cl  pointwise_broadcast.cl  pointwise_broadcast_reduce.cl  pooling.cl  random.cl  reduce.h  reduce2.h  scal.cl  sgemm.cl  softmax.cl  softmax_with_loss.cl  winograd_bwd_data.cl  winograd_bwd_filter.cl  winograd_fwd.cl
src/my_blas/: my_cblas.cpp  my_cblas.hpp
src/onnx/: onnx.cpp
src/ops/: activation.cpp  axpby.cpp  batch_normalization.cpp  bwd_bias.cpp  concat.cpp  conv2d.cpp  elementwise.cpp  initialization.cpp  inner_product.cpp  interpolation.cpp  mse_loss.cpp  nll_loss.cpp  parameter.cpp  pointwise.cpp  pooling.cpp  reduction.cpp  reshape.cpp  scal.cpp  softmax.cpp
tests/: json_test.cpp  make_test_cases_from_pt.py  mnist.cpp  network.cpp  test.hpp  test_broadcast_reduce.cpp  test_case_abs.json  test_case_activation.json  test_case_concat.json  test_case_conv2d.json  test_case_elementwise.json  test_case_global_pooling.json  test_case_hardtanh.json  test_case_inner_product.json  test_case_interpolation.json  test_case_log_softmax.json  test_case_mse_loss.json  test_case_nll_loss.json  test_case_param.json  test_case_pooling2d.json  test_case_reduction.json  test_case_slice.json  test_case_softmax.json  test_case_softmax_loss.json  test_case_threshold.json  test_context.cpp  test_from_template.cpp  test_functions.cpp  test_gemm.cpp  test_mnist_full_net.py  test_net.cpp  test_net.json  test_random.cpp  test_util.cpp  train_mnist.cpp  validate_onnx_converter.sh
tools/: bench_openvino.py  bench_plaidml.py  benchmark.cpp  bn_back.py  flops.cpp  image_predict.cpp  imagenet_predict_config.json  keras_benchmark.py  make-docs.sh  make_nets.sh  mnist_mlp.py  onnx2dp.py  plaidml_pip_freeze.txt  validate_caffe.py  validate_network.py  validate_onnx_imagenet.py  validate_onnx_torch.py  winograd_bwd.py
tools/nets/: alexnet_train.js  mnist_dp.json  mnist_train.json  vgg16_train.js
